--- a/emzed/core/explorers/widgets/choose_range.ui
+++ b/emzed/core/explorers/widgets/choose_range.ui
@@ -6,15 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>181</width>
+    <width>148</width>
     <height>74</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+   <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
     <horstretch>1</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>200</width>
+    <height>16777215</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -71,7 +77,7 @@
        </property>
        <property name="minimumSize">
         <size>
-         <width>60</width>
+         <width>100</width>
          <height>0</height>
         </size>
        </property>
@@ -84,6 +90,12 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
        </property>
       </widget>
      </item>
