SSDM-1361: little improvisiations for column selection dialog

--- a/emzed/core/explorers/widgets/column_selection_dialog.ui
+++ b/emzed/core/explorers/widgets/column_selection_dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>266</width>
-    <height>193</height>
+    <width>150</width>
+    <height>110</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,6 +28,12 @@
    </property>
    <item>
     <widget class="QListView" name="column_names">
+     <property name="minimumSize">
+      <size>
+       <width>150</width>
+       <height>0</height>
+      </size>
+     </property>
      <property name="focusPolicy">
       <enum>Qt::NoFocus</enum>
      </property>
