--- a/emzed/core/explorers/widgets/choose_range.ui
+++ b/emzed/core/explorers/widgets/choose_range.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>175</width>
-    <height>79</height>
+    <width>143</width>
+    <height>70</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -87,19 +87,13 @@
    <item row="0" column="2">
     <widget class="QLabel" name="column_name">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
      <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
