SSDM-2509 : filter widget container now has horizontal scrollbar if needed

--- a/emzed/core/explorers/widgets/filter_criteria.ui
+++ b/emzed/core/explorers/widgets/filter_criteria.ui
@@ -22,6 +22,9 @@
    </property>
    <item>
     <widget class="QGroupBox" name="groupBox">
+     <property name="flat">
+      <bool>true</bool>
+     </property>
      <layout class="QHBoxLayout" name="horizontalLayout"/>
     </widget>
    </item>
