--- a/emzed/core/explorers/widgets/column_selection_dialog.ui
+++ b/emzed/core/explorers/widgets/column_selection_dialog.ui
@@ -10,6 +10,12 @@
     <height>110</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>150</width>
+    <height>110</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Select Columns</string>
   </property>
