--- a/emzed/core/explorers/widgets/spectra_selector.ui
+++ b/emzed/core/explorers/widgets/spectra_selector.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>SpectraSelector</class>
- <widget class="QWidget" name="SpectraSelector">
+ <widget class="QWidget" name="_SpectraSelector">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="_horizontalLayout">
    <property name="spacing">
     <number>-1</number>
    </property>
@@ -21,7 +21,7 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QFrame" name="frame">
+    <widget class="QFrame" name="_frame">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -34,35 +34,35 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
+     <layout class="QGridLayout" name="_gridLayout">
       <property name="horizontalSpacing">
        <number>10</number>
       </property>
       <property name="verticalSpacing">
-       <number>5</number>
+       <number>3</number>
       </property>
       <item row="1" column="0">
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="_label_2">
         <property name="text">
          <string>Choose Precursor</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QComboBox" name="precursor"/>
+       <widget class="QComboBox" name="_precursor"/>
       </item>
       <item row="0" column="1">
-       <widget class="QComboBox" name="ms_level"/>
+       <widget class="QComboBox" name="_ms_level"/>
       </item>
       <item row="0" column="0">
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="_label">
         <property name="text">
          <string>Choose MS Level</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="label_3">
+       <widget class="QLabel" name="_label_3">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -75,10 +75,10 @@
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="QLineEdit" name="precursor_max"/>
+       <widget class="QLineEdit" name="_precursor_max"/>
       </item>
       <item row="3" column="0">
-       <widget class="QLineEdit" name="precursor_min"/>
+       <widget class="QLineEdit" name="_precursor_min"/>
       </item>
      </layout>
     </widget>
