integrated last refac to peakmap explorer

--- a/emzed/core/explorers/widgets/spectra_selector_widget.ui
+++ b/emzed/core/explorers/widgets/spectra_selector_widget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>SpectraSelector</class>
- <widget class="QWidget" name="_SpectraSelector">
+ <widget class="QWidget" name="_SpectraSelectorWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
