--- a/emzed/core/explorers/widgets/filter_criteria_widget.ui
+++ b/emzed/core/explorers/widgets/filter_criteria_widget.ui
@@ -23,7 +23,7 @@
    <item>
     <widget class="QScrollArea" name="_scrollArea">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -49,7 +49,7 @@
         <x>0</x>
         <y>0</y>
         <width>285</width>
-        <height>76</height>
+        <height>78</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="_hlayout">
