--- a/emzed/core/explorers/widgets/view_range_widget.ui
+++ b/emzed/core/explorers/widgets/view_range_widget.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ViewRangeWidget</class>
+ <class>_ViewRangeWidget</class>
  <widget class="QWidget" name="_ViewRangeWidget">
   <property name="geometry">
    <rect>
@@ -19,6 +19,12 @@
    </property>
    <item row="3" column="1">
     <widget class="QFrame" name="_frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
       <size>
        <width>387</width>
@@ -91,6 +97,12 @@
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="_label_2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
           <width>181</width>
@@ -143,6 +155,12 @@
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="_label_4">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
           <width>181</width>
