--- a/emzed/core/explorers/widgets/choose_range.ui
+++ b/emzed/core/explorers/widgets/choose_range.ui
@@ -87,7 +87,7 @@
    <item row="0" column="2">
     <widget class="QLabel" name="column_name">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
