--- a/emzed/core/explorers/widgets/choose_value.ui
+++ b/emzed/core/explorers/widgets/choose_value.ui
@@ -35,7 +35,7 @@
    <item>
     <widget class="QLabel" name="column_name">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
        <horstretch>1</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
