--- a/emzed/core/explorers/widgets/string_filter.ui
+++ b/emzed/core/explorers/widgets/string_filter.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>159</width>
+    <width>200</width>
     <height>46</height>
    </rect>
   </property>
@@ -35,10 +35,13 @@
    <item row="0" column="2">
     <widget class="QLabel" name="column_name">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="text">
+      <string>dfadadsfldsjfladjsfladsjfladjsalsdf</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
