--- a/emzed/core/explorers/widgets/choose_value.ui
+++ b/emzed/core/explorers/widgets/choose_value.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>111</width>
+    <width>260</width>
     <height>45</height>
    </rect>
   </property>
@@ -41,7 +41,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>placeholder</string>
+      <string>sadfsdfadsfasdfasdfasdfdsafadsfadsfdsf</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
