--- a/emzed/core/explorers/table_explorer_dialog.ui
+++ b/emzed/core/explorers/table_explorer_dialog.ui
@@ -37,9 +37,7 @@
     </spacer>
    </item>
    <item row="0" column="1">
-    <widget class="IntegrationWidget" name="integration_widget" native="true">
-     <zorder>eic_plotter</zorder>
-    </widget>
+    <widget class="IntegrationWidget" name="integration_widget" native="true"/>
    </item>
    <item row="3" column="0" colspan="3">
     <widget class="QTableView" name="tableView"/>
